# pd-simulator

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: DECISIONS.md  DESIGN.md  PARAMETERS.md  ROADMAP.md
docs/design-notes/: M10-design-freeze.md  M10a-claude-code-prompt.md  M10a-reconciliation-prompt.md
docs/explainers/: M10-growth-economy-explainer.md  M10b-async-event-time-explainer.md  M9.5-sweeps-and-invasion.md
docs/specs/: M09a-selection-accounting-bench.md  M09b-cooperation-recording.md  M09c-sweep-layer.md  M09d-sweep-tab.md  M10a-growth-economy.md  M10b-async-event-time-spec.md
examples/: quickstart.py  tournament_demo.py
examples/sweeps/: tft_invasion.yaml  tft_invasion_base.yaml
pdsim/: __init__.py  bench.py  gendocs.py  run.py
pdsim/config/: __init__.py  experiment.py  registry.py  scenarios.py
pdsim/core/: __init__.py  accounting.py  agent.py  async_dynamics.py  dynamics.py  economy.py  engine.py  events.py  game.py  match.py  matcher.py  reproduction.py  selection.py  strategy.py  timeseries.py
pdsim/core/strategies/: __init__.py  always_cooperate.py  always_defect.py  generous_tit_for_tat.py  grim_trigger.py  pavlov.py  random_strategy.py  registry.py  tit_for_tat.py
pdsim/io/: __init__.py  results.py
pdsim/sweep/: __init__.py  __main__.py  metrics.py  runner.py  spec.py
pdsim/tests/: __init__.py  stub_strategies.py  test_accounting.py  test_agent.py  test_app.py  test_async_dynamics.py  test_axelrod_crossvalidation.py  test_bench.py  test_charts.py  test_cli.py  test_cooperation.py  test_dynamics.py  test_economy.py  test_economy_helpers.py  test_engine.py  test_experiment_config.py  test_game.py  test_gendocs.py  test_match.py  test_matcher.py  test_registry.py  test_reproduction.py  test_results.py  test_scenarios.py  test_selection.py  test_strategies.py  test_strategy_registry.py  test_strategy_view.py  test_sweep_metrics.py  test_sweep_runner.py  test_sweep_spec.py  test_sweep_ui.py  test_timeseries.py  test_ui_helpers.py
pdsim/ui/: __init__.py  app.py  economy_helpers.py  helpers.py  sweep_helpers.py
pdsim/viz/: __init__.py  charts.py
