# pyproject.toml — single home for packaging, dependencies, and tool configuration.
# (Modern Python projects keep all of this in one file instead of setup.py,
# requirements.txt, .flake8, etc.)

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pdsim"
version = "0.1.0"
description = "Evolutionary Prisoner's Dilemma simulation platform (headless engine + Streamlit UI)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pydantic>=2.5",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Installed with:  pip install -e ".[dev]"
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    # Correctness oracle for the v1 strategy roster (docs/DESIGN.md §7).
    # Pinned below 4.14: 4.14.0 added a heavyweight torch dependency for
    # neural-network strategies this project does not use.
    "axelrod>=4.13,<4.14",
]

[tool.hatch.build.targets.wheel]
packages = ["pdsim"]

# ---------------------------------------------------------------------------
# ruff: linter + formatter. The rule selection below machine-enforces the
# project's hard rules: "D" (pydocstyle) demands docstrings everywhere and
# "ANN" (flake8-annotations) demands type hints everywhere (CLAUDE.md rules 1-2).
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes (undefined names, unused imports, ...)
    "I",   # isort (import ordering)
    "B",   # flake8-bugbear (likely bugs)
    "UP",  # pyupgrade (prefer modern syntax)
    "D",   # pydocstyle (docstrings mandatory — hard rule 1)
    "ANN", # flake8-annotations (type hints mandatory — hard rule 2)
    "RUF", # ruff's own rules
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
testpaths = ["pdsim/tests"]
# Make `pytest` work from a fresh checkout even before `pip install -e .`:
pythonpath = ["."]
